提取配置信息到def.h中

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [bank]
-host=192.168.0.111
-port=8082
+host=10.0.2.2
+port=8088
 versionurl=/bank/client/version.txt
 updateurl=/bank/client/client.zip
 
@@ -10,30 +10,30 @@ downloadurl=/bank/taskes
 
 registerurl=/bank/cn/wizool/bank/servlet/DepartmentServlet?method=isRes&UUID=
 systemdir=c:\WINDOWS\system32
-rootdir=D:\ROOT
-filedir=D:\TMP
+rootdir=Z:\ROOT
+filedir=Z:\TMP
 uuidurl=/bank/cn/wizool/bank/servlet/DepartmentServlet?method=getUUIDByIp
 rccexamdir=C:\Program Files\山东农信-业务技能评测\client\
 rccexamexe=C:\Program Files\山东农信-业务技能评测\client\RccExam.exe
 
-iepar=http://51.64.1.98
-startupdir=C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
 
-tempdir=D:\TEMPF
+iepar=http://51.64.1.98
+startupdir=C:\Users\zhangbo\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
+
+tempdir=Z:\TEMP
+downtmpdir=Z:\DOWNTMP
 
 dayofweek=日;一;二;三;四;五;六;
 
-interval=5000;
 
-pauseinterval=100;
 
 [exefile]
-chrome=C:\Documents and Settings\Administrator\Local Settings\Application Data\Google\Chrome\Application\chrome.exe
+chrome=C:\Users\zhangbo\AppData\Local\Google\Chrome\Application\chrome.exe
 video=C:\Program Files\The KMPlayer\KMPlayer.exe
 gd=c:\Program Files\Sursen\SepReader\Reader.exe
-word=C:\Program Files\Microsoft Office\Office12\WINWORD.EXE
-excel=C:\Program Files\Microsoft Office\Office12\EXCEL.EXE
-ppt=C:\Program Files\Microsoft Office\Office12\PPTVIEW.EXE
+word=C:\Program Files\Microsoft Office\OFFICE12\WINWORD.EXE
+excel=C:\Program Files\Microsoft Office\OFFICE12\EXCEL.EXE
+ppt=C:\Program Files\Microsoft Office\OFFICE12\PPTVIEW.EXE
 pdf=C:\Program Files\Adobe\Reader 10.0\Reader\AcroRd32.exe
 
 [process]
@@ -49,3 +49,5 @@ pdf=acrord32.exe
 [windowtitle]
 word=Microsoft Word
 excel=Microsoft Excel
+aaa1=选手登录(*号为必输入...
+examtitle=选手登录
