--- a/bank/config.ini
+++ b/bank/config.ini
@@ -10,18 +10,18 @@ downloadurl=/bank/taskes
 
 registerurl=/bank/cn/wizool/bank/servlet/DepartmentServlet?method=isRes&UUID=
 systemdir=c:\WINDOWS\system32
-rootdir=Z:\ROOT
-filedir=Z:\TMP
 uuidurl=/bank/cn/wizool/bank/servlet/DepartmentServlet?method=getUUIDByIp
 rccexamdir=C:\Program Files\山东农信-业务技能评测\client\
 rccexamexe=C:\Program Files\山东农信-业务技能评测\client\RccExam.exe
 
 
 iepar=http://51.64.1.98
-startupdir=C:\Users\zhangbo\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
+startupdir=C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
 
-tempdir=Z:\TEMP
-downtmpdir=Z:\DOWNTMP
+rootdir=C:\Users\zhangbo\Desktop\MEDIA_ROOT
+filedir=C:\Users\zhangbo\Desktop\MEDIA_FILE
+tempdir=C:\Users\zhangbo\Desktop\MEDIA_TEMP
+downtmpdir=C:\Users\zhangbo\Desktop\MEDIA_DOWN
 
 dayofweek=日;一;二;三;四;五;六;
 
@@ -30,11 +30,11 @@ dayofweek=日;一;二;三;四;五;六;
 [exefile]
 chrome=C:\Users\zhangbo\AppData\Local\Google\Chrome\Application\chrome.exe
 video=C:\Program Files\The KMPlayer\KMPlayer.exe
-gd=c:\Program Files\Sursen\SepReader\Reader.exe
-word=C:\Program Files\Microsoft Office\OFFICE12\WINWORD.EXE
-excel=C:\Program Files\Microsoft Office\OFFICE12\EXCEL.EXE
-ppt=C:\Program Files\Microsoft Office\OFFICE12\PPTVIEW.EXE
-pdf=C:\Program Files\Adobe\Reader 10.0\Reader\AcroRd32.exe
+gd=C:\Program Files\Sursen Reader\SursenReader.exe
+word=C:\Program Files\Microsoft Office\OFFICE11\WINWORD.EXE
+excel=C:\Program Files\Microsoft Office\OFFICE11\EXCEL.EXE
+ppt=C:\Program Files\Microsoft Office\OFFICE11\PPTVIEW.EXE
+pdf=C:\Program Files\Adobe\Reader 11.0\Reader\AcroRd32.exe
 
 [process]
 picture=rundll32.exe
