--- a/bank/config.ini
+++ b/bank/config.ini
@@ -18,7 +18,7 @@ rccexamexe=C:\Program Files\山东农信-业务技能评测\client\RccExam.exe
 iepar=http://51.64.1.98
 startupdir=C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
 
-taskdir=C:\Users\zhangbo\Desktop\MEDIA_ROOT
+taskdir=C:\Users\zhangbo\Desktop\MEDIA_TASK
 filedir=C:\Users\zhangbo\Desktop\MEDIA_FILE
 tempdir=C:\Users\zhangbo\Desktop\MEDIA_TEMP
 downtmpdir=C:\Users\zhangbo\Desktop\MEDIA_DOWN
